--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "antlr4-tool",
+  "name": "@mctech/antlr4-tool",
   "version": "1.1.1",
   "description": "An Antlr4 tool that generates both Typescript and JavaScript Antlr Parsers (Current Antlr version: 4.8)",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "bin": {
-    "antlr4-tool": "dist/app.js",
-    "antlr4.js": "dist/app.js"
+    "mctech-antlr4-tool": "src/cli.js",
+    "mctech-antlr4.js": "src/cli.js"
   },
   "scripts": {
-    "fix-resolutions": "npx npm-force-resolutions",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist",
-    "lint": "tslint -p . -c tslint.json 'src/**/*.ts'",
-    "build": "rm -rf dist && mkdir -p dist/antlr-core/templates && cp -r src/bin dist && cp -r src/antlr-core/templates ./dist/antlr-core && tsc"
+    "test": "bash -c 'node --experimental-import-meta-resolve --experimental-vm-modules ./src/cli.js -l ts -o ./src/test ./samples/c/C.g4'",
+    "build": "rollup -c",
+    "buildDev": "rollup -c --watch --environment=dev"
   },
   "files": [
     "dist",
@@ -29,18 +28,13 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "@types/antlr4": "^4.7.0",
-    "antlr4": "^4.8.0",
+    "antlr4": "^4.10.0",
     "chalk": "^2.4.1",
     "chdir": "0.0.0",
     "commander": "^2.16.0",
-    "directory-exists": "^2.0.0",
     "ejs": "^2.6.1",
     "find-package-json": "^1.1.0",
-    "lodash": "^4.17.10",
-    "mkdir-recursive": "^0.4.0",
-    "node-eval": "^2.0.0",
-    "targz": "^1.0.1"
+    "lodash": "^4.17.10"
   },
   "repository": {
     "type": "git",
@@ -52,14 +46,5 @@
   },
   "resolutions": {
     "minimist": "^1.2.5"
-  },
-  "devDependencies": {
-    "@types/commander": "^2.12.2",
-    "@types/ejs": "^2.6.0",
-    "@types/lodash": "^4.14.116",
-    "@types/node": "^10.11.3",
-    "npm-force-resolutions": "0.0.3",
-    "tslint": "^5.11.0",
-    "typescript": "^3.1.1"
   }
 }
