生成Parser中的symbol声明

--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "@mctech/antlr4-tool",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "An Antlr4 tool that generates both Typescript and JavaScript Antlr Parsers (Current Antlr version: 4.8)",
   "main": "src/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "bin": {
-    "mctech-antlr4-tool": "src/cli.js",
-    "mctech-antlr4.js": "src/cli.js"
+    "mctech-antlr4-tool": "src/app.js",
+    "mctech-antlr4.js": "src/app.js"
   },
   "scripts": {
-    "test": "bash -c 'node --experimental-import-meta-resolve --experimental-vm-modules ./src/cli.js -l ts -o ./src/test ./samples/c/C.g4'",
-    "build": "rollup -c",
-    "buildDev": "rollup -c --watch --environment=dev"
+    "test": "bash -c 'node --experimental-import-meta-resolve --experimental-vm-modules ./src/cli.js -l ts -o ./src/test ./samples/c/C.g4'"
   },
   "files": [
-    "dist",
+    "src",
     "LICENSE",
     "docs"
   ],
@@ -28,13 +26,20 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@rollup/plugin-commonjs": "^21.1.0",
+    "@rollup/plugin-node-resolve": "^13.2.0",
+    "@swc/core": "^1.2.165",
     "antlr4": "^4.10.0",
     "chalk": "^2.4.1",
     "chdir": "0.0.0",
     "commander": "^2.16.0",
     "ejs": "^2.6.1",
     "find-package-json": "^1.1.0",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "rollup": "^2.70.2",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-delete": "^2.0.0",
+    "rollup-plugin-swc": "^0.2.1"
   },
   "repository": {
     "type": "git",
