--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mctech/antlr4-tool",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "An Antlr4 tool that generates both Typescript and JavaScript Antlr Parsers (Current Antlr version: 4.8)",
   "main": "src/index.js",
   "type": "module",
@@ -11,7 +11,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "test": "node --experimental-import-meta-resolve --experimental-vm-modules ./src/cli.js -l ts -o ./src/test ./samples/c/C.g4"
+    "test": "node --experimental-import-meta-resolve --experimental-vm-modules ./src/cli.js -l ts -o ./src/test ./samples/c/ImpalaLexer.g4 ./samples/c/ImpalaParser.g4"
   },
   "files": [
     "src",
