--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mctech/antlr4-tool",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "An Antlr4 tool that generates both Typescript and JavaScript Antlr Parsers (Current Antlr version: 4.8)",
   "main": "src/index.js",
   "type": "module",
@@ -27,7 +27,7 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "antlr4": "^4.10.1",
+    "antlr4": "4.11.0",
     "chalk": "^2.4.1",
     "chdir": "0.0.0",
     "commander": "^2.16.0",
